<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:blurkit="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/zw_white">

    <LinearLayout
        android:id="@+id/exam_guide_top_con"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/exam_guide_header"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/tmp_avatar"/>

            <TextView
                android:id="@+id/exam_guide_username"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/zw_gray_main_cell_txt"
                android:textSize="18sp"
                android:text="用户名"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/exam_guide_btm_con"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal"
        android:layout_height="100dp"
        android:weightSum="10">

            <TextView
                android:id="@+id/exam_guide_to_do"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="8"
                android:gravity="center"
                android:textColor="@color/zw_white"
                android:textSize="16sp"
                android:text="@string/exam_guide_to_test"
                android:background="@drawable/login_btn_bg_shape"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/exam_guide_top_con"
        android:layout_above="@id/exam_guide_btm_con"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="10">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/exam_guide_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textColor="@color/zw_gray_me_page_txt"
                    android:text="@string/exam_guide_duration"/>

                <TextView
                    android:id="@+id/exam_guide_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textColor="@color/zw_gray_me_page_txt"
                    android:text="@string/exam_guide_total_score"/>

                <TextView
                    android:id="@+id/exam_guide_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textColor="@color/zw_gray_me_page_txt"
                    android:text="@string/exam_guide_total_count"/>

                <TextView
                    android:id="@+id/exam_guide_pass_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textColor="@color/zw_gray_me_page_txt"
                    android:text="@string/exam_guide_pass"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/zw_gray_main_cell_sub_txt"
                    android:text="@string/exam_guide_desc_t"/>

                <TextView
                    android:id="@+id/exam_guide_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/zw_gray_main_cell_sub_txt"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
